# haskell-grpc-demo

./: LICENSE  README.md
demo/: cabal.project  demo.cabal  demo.proto  hie.yaml
demo/app/: Main.hs  Schema.hs
demo/src/: Main.hs  Schema.hs
